fix incorrect tag spacing by removing left margin from svg

--- a/app/assets/stylesheets/custom/components.css
+++ b/app/assets/stylesheets/custom/components.css
@@ -62,7 +62,7 @@
     @apply border-primary-200 bg-primary-100/80 pr-1.5 text-primary-600;
 
     & > svg {
-      @apply ml-1.75 size-4 cursor-pointer rounded-full p-0.5 text-primary-600 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
+      @apply size-4 cursor-pointer rounded-full p-0.5 text-primary-600 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
     }
   }
 
